Added news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -119,7 +119,8 @@
             </div>
             <div class="col7 push1 content">
                 <h2>Belgium expects 3450 Devoxxians</h2>
-                <p>Registration is now open for the 12th Devoxx edition, get your tickets today before we again sell out!</p>
+                <h3>Nov. 11-15 2013</h3>
+                <p>Registration is open for the 12th Devoxx edition, get your tickets today before we sell out!</p>
                 <a href="https://regbe.devoxx.com/public#DV13" class="btn">Buy tickets</a>
             </div>
         </div>
@@ -132,11 +133,18 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="/dv13-schedule.html"><img src="../images/news/search.jpg" alt=""></a>
+                <div class="date">17 Sep. '13</div>
+                <h4>Search Schedule</h4>
+                <p>We've recently added content search to our brand new website (see header search icon).</p>
+                <p>Next month we'll also release a grid view schedule with MySchedule features allowing you to prepare your Devoxx visit.</p>
+            </li>
+            <li>
                 <a href="/dv13-schedule.html"><img src="../images/news/schedule.jpg" alt=""></a>
                 <div class="date">3 Sep. '13</div>
                 <h4>Devoxx Schedule</h4>
                 <p>A big chunk of the Devoxx schedule is now available online.</p>
-                <p>We're still reviewing some extra speakers and topics, so expect more talks in the coming weeks!
+                <p>We're still reviewing some extra speakers and topics, expect more talks in the coming weeks!
                     <a href="/dv13-schedule.html">View schedule</a></p>
             </li>
             <li>
