Place team members on full width of page

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -49,7 +49,7 @@
     </div>
 
     <div id="team" class="area lightgrey">
-        <div class="grid">
+        <!--<div class="grid">-->
 
             <div class="row">
                 <div class="col20">
@@ -452,7 +452,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        <!--</div>-->
     </div>
 
 
