--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -104,7 +104,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="Admin Program CFP">
+                        <li class="Admin Program CFP Devices">
                             <div class="icon" style="background: url('../../images/team/StephanJanssen.jpg') no-repeat center;"></div>
                             <h4>Stephan Janssen</h4>
 
