Added Microsoft as platinum partner

--- a/app/views/sponsors.html
+++ b/app/views/sponsors.html
@@ -23,17 +23,21 @@
             </div>
 
             <div class="row gold">
-                <div class="col5 push1">
+                <div class="col4 push1">
                     <a href="http://www.oracle.com" target="_blank"><img src="../images/sponsors/oracle.png" alt="Oracle"/></a>
                     <p>The steward of Java</p>
                 </div>
-                <div class="col5 push1">
+                <div class="col4 push1">
                     <a href="http://www.jboss.com" target="_blank"><img src="../images/sponsors/jboss.png" alt="JBoss"/></a>
                     <p>The open source Java EE application server</p>
                 </div>
-                <div class="col5 push1">
+                <div class="col4 push1">
                     <a href="http://www.google.com" target="_blank"><img src="../images/sponsors/google.png" alt="Google"/></a>
                     <p>The search company behind Android and Chrome</p>
+                </div>
+                <div class="col4 push1">
+                    <a href="http://www.windowsazure.com/en-us/" target="_blank"><img src="../images/sponsors/microsoft.png" alt="Microsoft"/></a>
+                    <p>The company behind Azure Cloud and Windows Phone8</p>
                 </div>
             </div>
         </div>
