Almost sold out

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -133,6 +133,15 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="https://regbe.devoxx.com"><img src="../images/news/almostthere.jpg" alt=""></a>
+                <div class="date">30 Sep. '13</div>
+                <h4>Almost Sold Out!</h4>
+                <p>We've passed 85% capacity for this years Devoxx edition.
+                So register ASAP if you want to enjoy this years Devoxx experience.</p>
+                <p>You've been warned!  :p</p>
+                <a href="https://regbe.devoxx.com">Register Here</a></p>
+            </li>
+            <li>
                 <a href="/dv13-schedule.html"><img src="../images/news/search.jpg" alt=""></a>
                 <div class="date">17 Sep. '13</div>
                 <h4>Search Schedule</h4>
