Duke's Choice Award

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -142,6 +142,14 @@
                 <a href="https://regbe.devoxx.com">Register Here</a></p>
             </li>
             <li>
+                <a href="http://www.devoxx.com/display/4KIDS/Home"><img src="../images/news/duke.jpg" alt=""></a>
+                <div class="date">30 Sep. '13</div>
+                <h4>Duke's Choice Award</h4>
+                <p>The Devoxx 4 Kids initiative has received the Duke's Choice Award at JavaOne 2013 in San Francisco.</p>
+                <p>Congrats to everyone involved!</p>
+                <p><a href="http://www.devoxx.com/display/4KIDS/Home">Start your own D4K</a></p>
+            </li>
+            <li>
                 <a href="/dv13-schedule.html"><img src="../images/news/search.jpg" alt=""></a>
                 <div class="date">17 Sep. '13</div>
                 <h4>Search Schedule</h4>
