Added missing paragraph

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -139,7 +139,7 @@
                 <p>We've passed 85% capacity for this years Devoxx edition.
                 So register ASAP if you want to enjoy this years Devoxx experience.</p>
                 <p>You've been warned!  :p</p>
-                <a href="https://regbe.devoxx.com">Register Here</a></p>
+                <p><a href="https://regbe.devoxx.com">Register Here</a></p>
             </li>
             <li>
                 <a href="http://www.devoxx.com/display/4KIDS/Home"><img src="../images/news/duke.jpg" alt=""></a>
