Added Parleys news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -133,6 +133,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="http://www.parleys.com/channel/5148921d0364bc17fc56adf0/presentations?sort=views&state=public"><img src="../images/news/parleys.jpg" alt=""></a>
+                <div class="date">2 Oct. '13</div>
+                <h4>Devoxx'12 Free on Parleys</h4>
+                <p>The 180 Devoxx'12 presentations are now freely available on Parleys.com</p>
+                <p>It takes 7 full days to watch them all :)</p>
+                <p><a href="http://www.parleys.com/channel/5148921d0364bc17fc56adf0/presentations?sort=views&state=public">Start Today</a></p>
+            </li>
+            <li>
                 <a href="https://regbe.devoxx.com"><img src="../images/news/almostthere.jpg" alt=""></a>
                 <div class="date">30 Sep. '13</div>
                 <h4>Almost Sold Out!</h4>
