--- a/app/views/home.html
+++ b/app/views/home.html
@@ -133,6 +133,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="https://regbe.devoxx.com"><img src="../images/news/soldout.jpg" alt=""></a>
+                <div class="date">3 Oct. '13</div>
+                <h4>Conference Sold Out</h4>
+                <p>The Devoxx Conference is Sold Out!</p>
+                <p>We still have a few limited Combi and University tickets available.</p>
+                <p><a href="https://regbe.devoxx.com">Get them now!</a></p>
+            </li>
+            <li>
                 <a href="http://www.parleys.com/channel/5148921d0364bc17fc56adf0/presentations?sort=views&state=public"><img src="../images/news/parleys.jpg" alt=""></a>
                 <div class="date">2 Oct. '13</div>
                 <h4>Devoxx'12 Free on Parleys</h4>
