--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,7 +7,6 @@
                         <h1>Born to be</h1>
                         <h3>November 11-15 2013</h3>
                         <p>Ready for your rebirth?</p>
-                        <a href="https://regbe.devoxx.com/public#DV13" class="btn">BUY TICKETS</a>
                     </div>
                     <div class="col11">
                         <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
@@ -120,7 +119,7 @@
             <div class="col7 push1 content">
                 <h2>Belgium expects 3450 Devoxxians</h2>
                 <h3>Nov. 11-15 2013</h3>
-                <p>Registration is open for the 12th Devoxx edition, get your tickets today before we sell out!</p>
+                <p>The Conference is SOLD OUT!<br>Limited number of Combi and University tickets still available.</p>
                 <a href="https://regbe.devoxx.com/public#DV13" class="btn">Buy tickets</a>
             </div>
         </div>
