Updated home page

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -135,8 +135,8 @@
                 <a href="https://regbe.devoxx.com"><img src="../images/news/soldout.jpg" alt=""></a>
                 <div class="date">3 Oct. '13</div>
                 <h4>Conference Sold Out</h4>
-                <p>The Devoxx Conference is Sold Out!</p>
-                <p>We still have a few limited Combi and University tickets available.</p>
+                <p>The Devoxx Conference is completely Sold Out!</p>
+                <p>We still have a few University tickets available.</p>
                 <p><a href="https://regbe.devoxx.com">Get them now!</a></p>
             </li>
             <li>
