Updated registration text

--- a/app/views/practical/faq.html
+++ b/app/views/practical/faq.html
@@ -27,15 +27,15 @@
 
                     <h4 class="acco_title">Registration</h4>
                     <div class="acco_content" style="display: block;">
-                        <p>Devoxx registration is <a href="https://regbe.devoxx.com">now open</a>, we expect (like previous years) to sell out around the 2nd week of October!</p>
+                        <p>Devoxx Conference and Combi tickets are sold out, you can still register for <a href="https://regbe.devoxx.com">the University days</a>.</p>
                     </div>
 
                     <h4 class="acco_title">Prices</h4>
                     <div class="acco_content">
                         <p>
                             Devoxx University is 350 Euro (2 days)<br>
-                            Devoxx Conference is 470 Euro (3 days)<br>
-                            Devoxx Combi ticket is 725 Euro (5 days)<br>
+                            Devoxx Conference is 470 Euro (3 days) SOLD OUT<br>
+                            Devoxx Combi ticket is 725 Euro (5 days) SOLD OUT<br>
                             All prices are excluding 21% VAT<br>
                             Every attendee receives full access to the Devoxx 2013 channel on <a href="http://www.parleys.com/channel/5148921d0364bc17fc56adf0/presentations">Parleys.com</a>!</p>
                         </div>
