--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,13 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <img src="../images/news/raspberry.jpg" alt="">
+                <div class="date">9 Oct. '13</div>
+                <h4>Electro Shop @ Devoxx</h4>
+                <p>Next to our book store we'll also host this year an electro shop where you can purchase Raspberry PI's, Arduino's and even Robot starter kits!</p>
+                <p>Make sure to bring your IoT wish list :)</p>
+            </li>
+            <li>
                 <a href="https://regbe.devoxx.com"><img src="../images/news/soldout.jpg" alt=""></a>
                 <div class="date">3 Oct. '13</div>
                 <h4>Conference Sold Out</h4>
