Changed news item title

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -134,7 +134,7 @@
             <li>
                 <img src="../images/news/raspberry.jpg" alt="">
                 <div class="date">9 Oct. '13</div>
-                <h4>Electro Shop @ Devoxx</h4>
+                <h4>IoT Shop @ Devoxx</h4>
                 <p>Next to our book store we'll also host this year an electro shop where you can purchase Raspberry PI's, Arduino's and even Robot starter kits!</p>
                 <p>Make sure to bring your IoT wish list :)</p>
             </li>
