Added description Geert

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -440,7 +440,7 @@
                             <div class="popup">
                                 <h4>Geert Van Landeghem</h4>
 
-                                <p></p>
+                                <p>Founder and Big Data Consultant at DataCrunchers. Organizer at BigData.be</p>
 
                                 <div class="links clearfix">
                                     <a href="http://be.linkedin.com/in/geertvanlandeghem" class="btn_linkedin">LinkedIn</a>
