--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="https://vimeo.com/76679380"><img src="../images/news/D4K.jpg" alt=""></a>
+                <div class="date">15 Oct. '13</div>
+                <h4>Devoxx4Kids Belgium</h4>
+                <p>The last two weekends we organised another Devoxx4Kids Belgium and it was a blast! Click picture to see video.</p>
+                <p>Make sure you organise your own D4K in your city/country!!</p>
+                <p><a href="http://www.devoxx.com/display/4KIDS/Home">Practical info here</a></p>
+            </li>
+            <li>
                 <img src="../images/news/raspberry.jpg" alt="">
                 <div class="date">9 Oct. '13</div>
                 <h4>IoT Shop @ Devoxx</h4>
