Added Newsletter news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,13 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="http://us2.campaign-archive1.com/?u=d777b04a23f45f06379a1e710&id=783089f23b"><img src="../images/news/party.jpg" alt=""></a>
+                <div class="date">17 Oct. '13</div>
+                <h4>Social Devoxx Events</h4>
+                <p>Devoxx is not only attending sessions, we've many different social events ranging from Hackergarten, Hack Fest to a movie and of course our Party!</p>
+                <p><a href="http://us2.campaign-archive1.com/?u=d777b04a23f45f06379a1e710&id=783089f23b">More info</a></p>
+            </li>
+            <li>
                 <a href="https://vimeo.com/76679380"><img src="../images/news/D4K.jpg" alt=""></a>
                 <div class="date">15 Oct. '13</div>
                 <h4>Devoxx4Kids Belgium</h4>
@@ -150,7 +157,7 @@
                 <a href="https://regbe.devoxx.com"><img src="../images/news/soldout.jpg" alt=""></a>
                 <div class="date">3 Oct. '13</div>
                 <h4>Conference Sold Out</h4>
-                <p>The Devoxx Conference is completely Sold Out!</p>
+                <p>With 3400+ Devoxxians the Conference is completely Sold Out!</p>
                 <p>We still have a few University tickets available.</p>
                 <p><a href="https://regbe.devoxx.com">Get them now!</a></p>
             </li>
