--- a/app/views/home.html
+++ b/app/views/home.html
@@ -119,8 +119,8 @@
             <div class="col7 push1 content">
                 <h2>Belgium expects 3450 Devoxxians</h2>
                 <h3>Nov. 11-15 2013</h3>
-                <p>The Conference is SOLD OUT!<br>Limited number of University tickets still available.</p>
-                <a href="https://regbe.devoxx.com/public#DV13" class="btn">Buy tickets</a>
+                <p>Devoxx is completely is SOLD OUT!</p>
+                <!--<a href="https://regbe.devoxx.com/public#DV13" class="btn">Buy tickets</a>-->
             </div>
         </div>
     </div>
