--- a/app/views/practical/faq.html
+++ b/app/views/practical/faq.html
@@ -27,7 +27,7 @@
 
                     <h4 class="acco_title">Registration</h4>
                     <div class="acco_content" style="display: block;">
-                        <p>Devoxx Conference and Combi tickets are sold out, you can still register for <a href="https://regbe.devoxx.com">the University days</a>.</p>
+                        <p>Devoxx is sold out, you can still register with your <a href="https://regbe.devoxx.com">discount code </a>.</p>
                     </div>
 
                     <h4 class="acco_title">Prices</h4>
