--- a/app/views/home.html
+++ b/app/views/home.html
@@ -157,9 +157,7 @@
                 <a href="https://regbe.devoxx.com"><img src="../images/news/soldout.jpg" alt=""></a>
                 <div class="date">3 Oct. '13</div>
                 <h4>Conference Sold Out</h4>
-                <p>With 3400+ Devoxxians the Conference is completely Sold Out!</p>
-                <p>We still have a few University tickets available.</p>
-                <p><a href="https://regbe.devoxx.com">Get them now!</a></p>
+                <p>With 3500 attendees Devoxx is completely Sold Out!</p>
             </li>
             <li>
                 <a href="http://www.parleys.com/channel/5148921d0364bc17fc56adf0/presentations?sort=views&state=public"><img src="../images/news/parleys.jpg" alt=""></a>
