Added news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="http://www.flickr.com/photos/sistersinbeauty/sets/72157636994797746/"><img src="../images/news/d4knl.jpg" alt=""></a>
+                <div class="date">28 Oct. '13</div>
+                <h4>Devoxx4Kids NL & CH</h4>
+                <p>Last weekend over 100 teenagers enjoyed Devoxx4Kids, now in Den Haag (Netherlands) and Geneva (Switzerland).</p>
+                <p>Congrats to all involved!</p>
+                <p><a href="http://www.flickr.com/photos/sistersinbeauty/sets/72157636994797746/">Pictures NL</a></p>
+            </li>
+            <li>
                 <a href="http://us2.campaign-archive1.com/?u=d777b04a23f45f06379a1e710&id=783089f23b"><img src="../images/news/party.jpg" alt=""></a>
                 <div class="date">17 Oct. '13</div>
                 <h4>Social Devoxx Events</h4>
