Added news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="https://www.facebook.com/photo.php?fbid=482744181833689&set=a.305330706241705.72602.269706553137454&type=1"><img src="../images/news/exhibition.gif" alt=""></a>
+                <div class="date">31 Oct. '13</div>
+                <h4>Devoxx Floor Plan</h4>
+                <p>26 companies will welcome the 3500 Devoxxians with products, services, (IoT) hardware and books.</p>
+                <p>Make sure you reserve some quality time during Devoxx to visit each booth!</p>
+                <p><a href="https://www.facebook.com/photo.php?fbid=482744181833689&set=a.305330706241705.72602.269706553137454&type=1">View floorplan</a></p>
+            </li>
+            <li>
                 <a href="http://www.flickr.com/photos/sistersinbeauty/sets/72157636994797746/"><img src="../images/news/d4knl.jpg" alt=""></a>
                 <div class="date">28 Oct. '13</div>
                 <h4>Devoxx4Kids NL & CH</h4>
