Added news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="https://www.parleys.com/upload"><img src="../images/news/Upload.gif" alt=""></a>
+                <div class="date">1 Nov. '13</div>
+                <h4>Message to Speakers</h4>
+                <p>Please upload your PDF slide deck before or after your Devoxx presentation onto Parleys.com.  This will improve our full multimedia post-processing afterwards, many thanks!</p>
+                <p>Hint: Use a 'DV13' tag in the upload form.</p>
+                <p><a href="https://www.parleys.com/upload">Upload now</a></p>
+            </li>
+            <li>
                 <a href="https://www.facebook.com/photo.php?fbid=482744181833689&set=a.305330706241705.72602.269706553137454&type=1"><img src="../images/news/exhibition.gif" alt=""></a>
                 <div class="date">31 Oct. '13</div>
                 <h4>Devoxx Floor Plan</h4>
