Corrected DevoxxFR link

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -112,7 +112,7 @@
                 <div class="map">
                     <img src="../images/home_about_map.png" alt="map" />
                     <a href="#home" class="btn_be"><span>Belgium</span></a>
-                    <a href="http://www.devoxx.com/display/FR13/Accueil" class="btn_fr"><span>France</span></a>
+                    <a href="http://www.devoxx.fr" class="btn_fr"><span>France</span></a>
                     <a href="http://www.devoxx.com/display/UK13/Home" class="btn_uk"><span>United Kingdom</span></a>
                 </div>
             </div>
