--- a/app/views/home.html
+++ b/app/views/home.html
@@ -135,7 +135,7 @@
                 <a href="http://us2.campaign-archive1.com/?u=d777b04a23f45f06379a1e710&id=91e356de2b"><img src="../images/news/car.gif" alt=""></a>
                 <div class="date">4 Nov. '13</div>
                 <h4>One Week Until Devoxx</h4>
-                <p>Only 7 days left until 3500 Devoxxians embrace the Devoxx experience with Rock Star speakers from all over the world.</p>
+                <p>Only 7 days until 3500 Devoxxians embrace the Devoxx experience with Rock Star speakers from all over the world.</p>
                 <p>Yes, the IQ level in Antwerp will increase substantially next week :o)</p>
                 <p><a href="http://us2.campaign-archive1.com/?u=d777b04a23f45f06379a1e710&id=91e356de2b">Practical details</a></p>
             </li>
