--- a/app/views/home.html
+++ b/app/views/home.html
@@ -144,7 +144,7 @@
                 <div class="date">1 Nov. '13</div>
                 <h4>Message to Speakers</h4>
                 <p>Please upload your PDF slide deck before or after your Devoxx presentation onto Parleys.com.  This will improve our full multimedia post-processing afterwards, many thanks!</p>
-                <p>Hint: Use a 'DV13' tag in the upload form.</p>
+                <p>Tip: Use a 'DV13' tag in the upload form.</p>
                 <p><a href="https://www.parleys.com/upload">Upload now</a></p>
             </li>
             <li>
