--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="http://www.jroller.com/aalmiray/entry/hackergarten_at_devoxx_are_you"><img src="../images/news/hackergarten.jpg" alt=""></a>
+                <div class="date">7 Nov. '13</div>
+                <h4>Devoxx Hackergarten</h4>
+                <p>On Tuesday from 9:30 onwards in the exhibitor floor another Hackergarten will take place driven by Andres Almiray and many more Open Source committers.</p>
+                <p>This is your chance to meet project leads, ask questions, donate or discuss code.  Don't miss it!</p>
+                <p><a href="http://www.jroller.com/aalmiray/entry/hackergarten_at_devoxx_are_you">More details</a></p>
+            </li>
+            <li>
                 <a href="http://us2.campaign-archive1.com/?u=d777b04a23f45f06379a1e710&id=91e356de2b"><img src="../images/news/car.gif" alt=""></a>
                 <div class="date">4 Nov. '13</div>
                 <h4>One Week Until Devoxx</h4>
