--- a/app/views/home.html
+++ b/app/views/home.html
@@ -119,7 +119,7 @@
             <div class="col7 push1 content">
                 <h2>Belgium expects 3500 Devoxxians</h2>
                 <h3>Nov. 11-15 2013</h3>
-                <p>Devoxx is completely SOLD OUT!</p>
+                <p>Devoxx is again completely SOLD OUT!</p>
                 <!--<a href="https://regbe.devoxx.com/public#DV13" class="btn">Buy tickets</a>-->
             </div>
         </div>
