--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="http://us2.campaign-archive1.com/?u=d777b04a23f45f06379a1e710&id=18fe9fa1d3"><img src="../images/news/lanyard.jpg" alt=""></a>
+                <div class="date">8 Nov. '13</div>
+                <h4>Practical Info</h4>
+                <p>More practical information can be found in our last pre-Devoxx newsletter.</p>
+                <p>Safe travels to all Devoxxians!</p>
+                <p><a href="http://us2.campaign-archive1.com/?u=d777b04a23f45f06379a1e710&id=18fe9fa1d3">Read Newsletter</a></p>
+            </li>
+            <li>
                 <a href="http://www.jroller.com/aalmiray/entry/hackergarten_at_devoxx_are_you"><img src="../images/news/hackergarten.jpg" alt=""></a>
                 <div class="date">7 Nov. '13</div>
                 <h4>Devoxx Hackergarten</h4>
