--- a/app/styles/wall.less
+++ b/app/styles/wall.less
@@ -21,6 +21,7 @@ body { background-color: black; }
 #cinema {
   @width: 1920px;
   @height: 817px;
+  margin-top: 130px;
   .screen(url('../images/dv13-cinemawall.jpg'));
 }
 
