Changed room text to white

--- a/app/styles/wall.less
+++ b/app/styles/wall.less
@@ -71,7 +71,7 @@ body { background-color: black; }
         .room {
             font-family: 'Lato';
             font-size: 3em;
-            color: #ff4520;
+            color: white;
             text-shadow: 2px 2px 2px #000;
             float: left;
             width: 50px;
