--- a/app/styles/wall.less
+++ b/app/styles/wall.less
@@ -2,6 +2,11 @@
 
 body { background-color: black; }
 
+h1 {
+  font-family: 'Lato';
+  font-size: 2em;
+}
+
 .screen(@url) {
     background: @url no-repeat;
     border: none;
@@ -179,9 +184,9 @@ body { background-color: black; }
 
 #notice {
     opacity: 0.8;
-    font-family: 'verdana';
+    font-family: 'lato';
     font-size: 2em;
-    color: red;
+    color: #ffffff;
     background-color: black;
     -webkit-box-shadow: 0px 0px 10px rgba(0,0,0,0.7);
     position: absolute;
