Added news item

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,6 +132,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <a href="http://www.flickr.com/photos/bejug"><img src="../images/news/DevoxxTeam.jpg" alt=""></a>
+                <div class="date">8 Nov. '13</div>
+                <h4>The Devoxx Pictures</h4>
+                <p>Already experiencing the post-Devoxx blues?</p>
+                <p>Browsing the Devoxx pictures might soften the pain  :)</p>
+                <p><a href="http://www.flickr.com/photos/bejug">View pictures</a></p>
+            </li>
+            <li>
                 <a href="http://us2.campaign-archive1.com/?u=d777b04a23f45f06379a1e710&id=18fe9fa1d3"><img src="../images/news/lanyard.jpg" alt=""></a>
                 <div class="date">8 Nov. '13</div>
                 <h4>Practical Info</h4>
