Added news items

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,8 +5,7 @@
                 <div class="row">           
                     <div class="col9 content">
                         <h1>Born to be</h1>
-                        <h3>November 11-15 2013</h3>
-                        <p>Ready for your rebirth?</p>
+                        <p>Enjoy your rebirth!</p>
                     </div>
                     <div class="col11">
                         <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
@@ -117,9 +116,8 @@
                 </div>
             </div>
             <div class="col7 push1 content">
-                <h2>Belgium expects 3500 Devoxxians</h2>
-                <h3>Nov. 11-15 2013</h3>
-                <p>Devoxx is again completely SOLD OUT!</p>
+                <h2>Belgium welcomed again 3500 Devoxxians</h2>
+                <p>Up next: Devoxx France (Paris, April 16-18th)</p>
                 <!--<a href="https://regbe.devoxx.com/public#DV13" class="btn">Buy tickets</a>-->
             </div>
         </div>
@@ -131,6 +129,14 @@
 
     <div class="carousel">
         <ul class="newsList clearfix" news>
+            <li>
+                <a href="https://plus.google.com/photos/118041907032714528693/albums/5949635896910296337"><img src="../images/news/pierreantoine.jpg" alt=""></a>
+                <div class="date">24 Nov. '13</div>
+                <h4>Wonderful pictures</h4>
+                <p>Pierre-Antoine Grégoire has once again enriched us with a batch of beautiful Devoxx photo's.</p>
+                <p>Thanks for sharing your talent with us!</p>
+                <p><a href="https://plus.google.com/photos/118041907032714528693/albums/5949635896910296337">Enjoy</a></p>
+            </li>
             <li>
                 <a href="http://www.flickr.com/photos/bejug/sets/72157637558956606/"><img src="../images/news/DevoxxTeam.jpg" alt=""></a>
                 <div class="date">16 Nov. '13</div>
