--- a/app/views/home.html
+++ b/app/views/home.html
@@ -117,7 +117,7 @@
             </div>
             <div class="col7 push1 content">
                 <h2>Belgium welcomed again 3500 Devoxxians</h2>
-                <p>Up next: Devoxx France (Paris, April 16-18th)</p>
+                <p>Next up: Devoxx France (Paris, April 16-18th)</p>
                 <!--<a href="https://regbe.devoxx.com/public#DV13" class="btn">Buy tickets</a>-->
             </div>
         </div>
