--- a/app/views/home.html
+++ b/app/views/home.html
@@ -132,7 +132,7 @@
             <li>
                 <a href="https://plus.google.com/photos/118041907032714528693/albums/5949635896910296337"><img src="../images/news/pierreantoine.jpg" alt=""></a>
                 <div class="date">24 Nov. '13</div>
-                <h4>Wonderful pictures</h4>
+                <h4>Visual Joy Ride</h4>
                 <p>Pierre-Antoine Grégoire has once again enriched us with a batch of beautiful Devoxx photo's.</p>
                 <p>Thanks for sharing your talent with us!</p>
                 <p><a href="https://plus.google.com/photos/118041907032714528693/albums/5949635896910296337">Enjoy</a></p>
@@ -142,7 +142,7 @@
                 <div class="date">16 Nov. '13</div>
                 <h4>The Devoxx Pictures</h4>
                 <p>Already experiencing the post-Devoxx blues?</p>
-                <p>Browsing the Devoxx pictures might soften the pain  :)</p>
+                <p>Browsing the official Devoxx pictures might soften the pain  :)</p>
                 <p><a href="http://www.flickr.com/photos/bejug/sets/72157637558956606/">View pictures</a></p>
             </li>
             <li>
