Extra Devoxx news

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,7 +5,8 @@
                 <div class="row">           
                     <div class="col9 content">
                         <h1>Born to be</h1>
-                        <p>Enjoy your rebirth!</p>
+                        <p>All the Devoxx talks now available on Parleys.com!</p>
+                        <a href="http://us2.campaign-archive2.com/?u=d777b04a23f45f06379a1e710&id=e4f16ea20a" class="btn">More Info</a>
                     </div>
                     <div class="col11">
                         <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
@@ -14,84 +15,43 @@
                 </div>
             </div>                  
         </li>
-        <!--<li>-->
-            <!--<div class="grid">-->
-                <!--<div class="row">           -->
-                    <!--<div class="col9 content">-->
-                        <!--<h1>Call for Presentations</h1>-->
-                        <!--<h3>Speak @Devoxx</h3>-->
-                        <!--<p>We're looking for passionate developers from the community to present at Devoxx, check out the tracks and submit your talk(s)</p>-->
-                        <!--<a href="#/tracks" scroll="tracks" class="btn">Check our tracks</a>-->
-                    <!--</div>-->
-                    <!--<div class="col11">-->
-                        <!--<img src="images_dummy/slide_02.png" class="visual" alt="Be born again">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!---->
-            <!--</div>                  -->
-        <!--</li>-->
+
         <li>
             <div class="grid">
-            
-                <div class="row">           
+
+                <div class="row">
                     <div class="col9 content">
-                                                
-                        <h1>Let's talk Java</h1>
-                        <h3>Tracks 2013</h3>
-                        <p>Java is at the roots of this conference, come learn about what's new in Java SE/EE, JSRs, JDK8, modularity and much more at Devoxx</p>
-                        <a href="#/tracks" scroll="tracks" class="btn">All tracks</a>
-                        
+
+                        <h1>The Official Devoxx Video</h1>
+                        <p>The Devoxx 2013 atmosphere video available.</p>
+                        <a href="https://vimeo.com/81953141" class="btn">Watch Now</a>
                     </div>
                     <div class="col11">
-                    
-                        <img src="images_dummy/slide_java.png" class="visual" alt="Be born again">
-                    
+                        <img src="images_dummy/slide_02.png" class="visual" alt="Be born again">
                     </div>
                 </div>
-                
-            </div>                  
+
+            </div>
         </li>
+
         <li>
             <div class="grid">
-            
-                <div class="row">           
+
+                <div class="row">
                     <div class="col9 content">
-                    
-                        <h1>What's new in Android</h1>
-                        <h3>Tracks 2013</h3>
-                        <p>Android is the largest mobile platform in use today, come learn about the latest updates from Googlers or passionate member of it's ever growing community</p>
-                        <a href="#/" class="btn" scroll="tracks">All tracks</a>
-                        
+
+                        <h1>Happy Holidays</h1>
+                        <p>Best wishes from the Devoxx team!</p>
+
                     </div>
                     <div class="col11">
-                    
-                        <img src="images_dummy/slide_android.png" class="visual" alt="Be born again">
-                    
+
+                        <img src="images_dummy/holidays.png" class="visual" alt="Be born again">
+
                     </div>
                 </div>
-                
-            </div>                  
-        </li>
-        <li>
-            <div class="grid">
-            
-                <div class="row">           
-                    <div class="col9 content">
-                    
-                        <h1>What you didn't know about HTML5</h1>
-                        <h3>Tracks 2013</h3>
-                        <p>Learn about the new breed of JS web frameworks, the new features in HTML5, CSS3, JavaScript.next, the power of node.js and all it's libraries and tools that make web development productive and fun</p>
-                        <a href="#/" class="btn" scroll="tracks">All tracks</a>
-                        
-                    </div>
-                    <div class="col11">
-                    
-                        <img src="images_dummy/slide_html5.png" class="visual" alt="Be born again">
-                    
-                    </div>
-                </div>
-                
-            </div>                  
+
+            </div>
         </li>
 </div>
 
@@ -129,6 +89,21 @@
 
     <div class="carousel">
         <ul class="newsList clearfix" news>
+            <li>
+                <a href="http://parleys.com/channel/528b321de4b054cd7d2ef448/presentations"><img src="../images/news/devoxx2013.jpg" alt=""></a>
+                <div class="date">18 Dec. '13</div>
+                <h4>Devoxx Talks on Parleys.com</h4>
+                <p>All the Devoxx presentations are now available on Parleys.com</p>
+                <p>FREE access for the attendees and subscription or pay-per-view for others.</p>
+                <p><a href="http://parleys.com/channel/528b321de4b054cd7d2ef448/presentations">Watch Now</a></p>
+            </li>
+            <li>
+                <a href="http://vimeo.com/81953141"><img src="../images/news/video.jpg" alt=""></a>
+                <div class="date">18 Dec. '13</div>
+                <h4>The Official Devoxx Movie</h4>
+                <p>Missing the Devoxx atmosphere? Then sit back and enjoy the official Devoxx 2013 movie made by Roy Van Rijn.</p>
+                <p><a href="http://vimeo.com/81953141">Enjoy</a></p>
+            </li>
             <li>
                 <a href="https://plus.google.com/photos/118041907032714528693/albums/5949635896910296337"><img src="../images/news/pierreantoine.jpg" alt=""></a>
                 <div class="date">24 Nov. '13</div>
