Devoxx atmosphere video

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -24,7 +24,7 @@
 
                         <h1>The Official Devoxx Video</h1>
                         <p>The Devoxx 2013 atmosphere video available.</p>
-                        <a href="https://vimeo.com/81953141" class="btn">Watch Now</a>
+                        <a href="http://parleys.com/play/52b1b87fe4b0ec3f38ec9395/chapter1/about" class="btn">Watch Now</a>
                     </div>
                     <div class="col11">
                         <img src="images_dummy/slide_02.png" class="visual" alt="Be born again">
@@ -98,11 +98,11 @@
                 <p><a href="http://parleys.com/channel/528b321de4b054cd7d2ef448/presentations">Watch Now</a></p>
             </li>
             <li>
-                <a href="http://vimeo.com/81953141"><img src="../images/news/video.jpg" alt=""></a>
+                <a href="http://parleys.com/play/52b1b87fe4b0ec3f38ec9395/chapter1/about"><img src="../images/news/video.jpg" alt=""></a>
                 <div class="date">18 Dec. '13</div>
                 <h4>The Official Devoxx Movie</h4>
                 <p>Missing the Devoxx atmosphere? Then sit back and enjoy the official Devoxx 2013 movie made by Roy Van Rijn.</p>
-                <p><a href="http://vimeo.com/81953141">Enjoy</a></p>
+                <p><a href="http://parleys.com/play/52b1b87fe4b0ec3f38ec9395/chapter1/about">Enjoy</a></p>
             </li>
             <li>
                 <a href="https://plus.google.com/photos/118041907032714528693/albums/5949635896910296337"><img src="../images/news/pierreantoine.jpg" alt=""></a>
