Added mobile links to Devoxx 2013 presentations

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -90,6 +90,14 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
+                <img src="../images/news/Mobile.jpg" alt="">
+                <div class="date">1 Jan. '14</div>
+                <h4>Mobile Devoxx 2013</h4>
+                <p>Stream or download the Devoxx 2013 presentations on your iPad or Android devices and relive Devoxx 2013 whenever, wherever!</p>
+                <p><a href="https://play.google.com/store/apps/details?id=com.parleys.android.devoxx2013">On Android</a></p>
+                <p><a href="https://itunes.apple.com/us/app/devoxx-2013/id785466681">On iPad</a></p>
+            </li>
+            <li>
                 <a href="http://parleys.com/channel/528b321de4b054cd7d2ef448/presentations"><img src="../images/news/devoxx2013.jpg" alt=""></a>
                 <div class="date">18 Dec. '13</div>
                 <h4>Devoxx Talks on Parleys.com</h4>
@@ -471,9 +479,9 @@
                 <h2>What’s up? <span>#DEVOXX</span></h2>
             </div>
             <div class="col10 apps">
-                <h4>Relive Devoxx 2012!</h4>
-                <a href="https://play.google.com/store/apps/details?id=com.parleys.android.devoxx2012" class="btn googleStore"></a>
-                <a href="https://itunes.apple.com/us/app/devoxx-2012-on-parleys.com/id589421953" class="btn appStore"></a>
+                <h4>Relive Devoxx 2013</h4>
+                <a href="https://play.google.com/store/apps/details?id=com.parleys.android.devoxx2013" class="btn googleStore"></a>
+                <a href="https://itunes.apple.com/us/app/devoxx-2013/id785466681" class="btn appStore"></a>
             </div>
         </div>
 
